[package]
name = "ssb-keyfile"
version = "0.3.1"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Keyfile operations for ssb."
repository = "https://github.com/AljoschaMeyer/ssb-keyfile-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"
ssb-crypto = "0.1.4"
ssb-multiformats = { git = "https://github.com/staltz/ssb-multiformats", branch = "support-presigil-id" }
snafu = "0.6.0"
base64 = "0.11.0"
